@@ -8,6 +8,7 @@ ___________________________________________________________
 -- Earlier releases might not get notified about future changes
 
 -> Changed version check download target to show update packages (hajo)
+-> Fixed files download page errors for non existing entries (hajo)
 -> Fixed files listcat showing an empty list of subcategories (hajo)
 -> Updated CKEditor to 3.6.6
 -> Updated CKEditor filebrowser to FCKEditor 2.6.9
